--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hallo</title>
+        <link rel="stylesheet" href="./Styles/style.css">
     </head>
     <body>
         Hallo, Tee uno Kaffee bitte!!
